--- a/style.css
+++ b/style.css
@@ -49,13 +49,13 @@ z-index: 1;
     
     }
     
-    /* .quote-icon {
+    .quote-icon {
         width: 300px;
         height: 128px;
-    } */
+    }
     
-    /* .quote-icon img {
+     .quote-icon img {
         display: block;
         margin: 0 auto;
-    } */
+    }
     
